ios overflow:hidden bug 6

--- a/main.scss
+++ b/main.scss
@@ -142,6 +142,7 @@ $warning: #3edc99;
     margin-top: 165px;
     margin-bottom: -35px;
     margin-left: 10%;
+    will-change: auto;
   }
 
   .dot-container {
