--- a/style.css
+++ b/style.css
@@ -10904,6 +10904,7 @@ ul .btn {
   margin-top: 165px;
   margin-bottom: -35px;
   margin-left: 10%;
+  will-change: auto;
 }
 
 .dot-container {
